mobile spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 #container {
     display: flex;
     align-items: flex-start;
-    padding: 75px 50px;
+    padding: 50px 25px;
     max-width: 750px;
     flex-wrap: wrap;
     margin: 0 auto;
@@ -20,8 +20,7 @@ body {
 
 /* #profile,
 #page-content {
-    border: 1px solid black;
-    padding: 20px;
+    border: 5px solid black;
 } */
 
 #profile {
@@ -33,9 +32,9 @@ body {
 }
 
 #page-content {
-    flex: 3 0 400px;
-    font-size: 1.25rem;
-    padding: 20px;
+    flex: 3 0;
+    font-size: 1.1rem;
+    /* padding: 20px; */
 }
 
 #profile-picture {
@@ -92,13 +91,13 @@ footer {
     text-align: center;
     position: fixed;
     bottom: 0;
-    padding: 10px;
+    padding: 10px 0;
     background-color: #f5f5f5;
     color: #333;
 }
 
-@media (max-width: 550px) {
+/* @media (max-width: 550px) {
     #container {
         padding: 75px 0;
     }
-}
+} */
